; ModuleID = '/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-imxdi.c_dryice_rtc_alarm_irq_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-imxdi.c_dryice_rtc_alarm_irq_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.imxdi_dev = type { i32 }

@DIER_CAIE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, i32)* @dryice_rtc_alarm_irq_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dryice_rtc_alarm_irq_enable(%struct.device* %0, i32 %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.imxdi_dev*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.device*, %struct.device** %3, align 8
  %7 = call %struct.imxdi_dev* @dev_get_drvdata(%struct.device* %6)
  store %struct.imxdi_dev* %7, %struct.imxdi_dev** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load %struct.imxdi_dev*, %struct.imxdi_dev** %5, align 8
  %12 = load i32, i32* @DIER_CAIE, align 4
  %13 = call i32 @di_int_enable(%struct.imxdi_dev* %11, i32 %12)
  br label %18

14:                                               ; preds = %2
  %15 = load %struct.imxdi_dev*, %struct.imxdi_dev** %5, align 8
  %16 = load i32, i32* @DIER_CAIE, align 4
  %17 = call i32 @di_int_disable(%struct.imxdi_dev* %15, i32 %16)
  br label %18

18:                                               ; preds = %14, %10
  ret i32 0
}

declare dso_local %struct.imxdi_dev* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @di_int_enable(%struct.imxdi_dev*, i32) #1

declare dso_local i32 @di_int_disable(%struct.imxdi_dev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
